@@ -1,3 +1,8 @@
+2000-10-29  Eskil Heyn Olsen  <eskil@eazel.com>
+
+	* gnome-vfs.spec.in:
+	if $prefix/lib not in /etc/ld.so.conf, add it.
+
 2000-10-28  Pavel Cisler <pavel@eazel.com>
 
 	* libgnomevfs/gnome-vfs-xfer.c: (progress_set_source_target_uris):
